# sandbox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  GPATH  GRTAGS  GTAGS
algorithms/a-star/: Makefile  astar.cxx  astar.hxx  astar.s  bench  bench.cxx  hr-00.cxx  hr-01.cxx  hr-02.cxx  hr-14770-input0.txt  hr-14770-input10.ppm  hr-14770-input10.txt  hr-14770-output0.txt  hr-14770-output10.txt  hr-14770.cxx  main  main.cxx  map-edgecase.txt  map-simple.txt  map-wall.txt  perf.data  perf.data.old  perf.hist.1  simple.cxx
algorithms/bellman-ford/: main  main.cxx
algorithms/dijkstra/: dijkstra  dijkstra.cxx
algorithms/ffloyd-warshall/: main  main.cxx
algorithms/johnson/: johnson.cxx
algorithms/knapsack/: knapsack  knapsack.cxx
algorithms/matrix/spiral/: input.txt  main  main.cxx
algorithms/optimal-bst/: main  main.cxx
algorithms/rectangles/: main.cxx
asio/: async_exec.cxx
avr/blink/: Makefile  main.cxx
avr/home/: Makefile  common.hxx  dht.cxx  dht.hxx  lcd.cxx  lcd.hxx  main.cxx  millis.cxx  millis.hxx
bench-condvars-and-pipes/: condvars  condvars.cxx  fork-condvars  fork-condvars.cxx  fork-pipes  fork-pipes.cxx  pipes  pipes.cxx
codejam-2017/qualification/: .#problem-3.cxx#.icloud  problem-1.cxx  problem-3.cxx
hackerrank/: gravity-tree  gravity-tree.cxx  i-small.txt  i-worst.txt  o-small.txt  o-worst.txt  template.cxx
hackerrank/contests/hourrank-18/super-six-substrings/: main.cxx
haskell/: .tree.hi.icloud  .tree.hs.icloud  tree
opengl/01-window/: main  main.cxx
vectorization/: CMakeLists.txt  cpuid.hxx  simple_mat.cxx
